# arliss2019_tadpole

./: .gitignore  README.md  compile.sh  run.sh
ROVER/: .gitignore
ROVER/src/: CMakeLists.txt  main.cpp
ROVER/src/actuator/: motor.cpp  motor.h  motor_constant.h  servo.cpp  servo.h  servo_constant.h
ROVER/src/manager/: accel_manager.cpp  accel_manager.h  accel_mangaer_constanth.h
ROVER/src/noisy/: buzzer.cpp  buzzer.h
ROVER/src/rover_util/: delayed_execution.h  logging.cpp  serial_command.cpp  utils.cpp
ROVER/src/sensor/: distance.cpp  distance.h  distance_constant.h  gps.cpp  gps.h  gps_constant.h  light.cpp  light.h  light_constant.h  lora.cpp  lora.h  lora_constant.h  nineaxis.cpp  nineaxis.h  nineaxis_constant.h  pressure.h  pressure_address.h
ROVER/src/sequence/: arliss_sequence.cpp  arliss_sequence.h  closing_sequence.cpp  closing_sequence.h  closing_sequence_constant.h  falling_sequence.cpp  falling_sequence.h  navigating_sequence.cpp  navigating_sequence.h  navigating_sequence_constant.h  separating_sequence.cpp  separating_sequence.h  separating_sequence_constant.h  testing_sequence.cpp  testing_sequence.h  waiting_sequence.cpp  waiting_sequence.h
ROVER/src/sub_sequence/: digging.cpp  digging.h  digging_constant.h  digging_turnback.cpp  near_navigating.cpp  near_navigating.h  near_navigating_constant.h  stucking.cpp  stucking_constant.h  waking_turnback.cpp  waking_turnback.h  waking_turnback_constant.h  waking_turnside.cpp  waking_turnside.h  waking_turnside_constant.h
RTIMULib2/: .gitignore
VL53L0XLib/: .gitignore
setting/: RTIMULib.ini  (+1 more)
(+92 files in other folders)
